# inkwell

./: .gitignore  CLAUDE.md  EDITOR_DETAIL.md  INSTITUTIONAL_LEARNINGS.md  README.md  dev  editor_inspiration.tsx
.claude/: ralph-loop.local.md
backend/: .env.example  pyproject.toml
backend/src/proof_editor/: __main__.py  auth_deps.py  db.py  main.py  storage.py  ws_types.py
backend/src/proof_editor/agent/: focus_agent.py  focus_handler.py  interviewer.py  orchestrator.py  search.py
backend/src/proof_editor/api/: auth.py  preferences.py  sessions.py  styles.py  voice.py
backend/src/proof_editor/drafting/: generator.py  prompts.py  synthesizer.py
backend/src/proof_editor/examples/: loader.py
backend/src/proof_editor/learning/: __init__.py  feedback_distiller.py  outline_generator.py  pattern_extractor.py
backend/src/proof_editor/models/: draft.py  feedback.py  highlight.py  interview_message.py  preference.py  session.py  style.py  user.py
backend/src/proof_editor/style/: editorial.py  engine.py
backend/tests/: conftest.py  test_examples.py  test_prompts.py  test_websocket.py  test_ws_types.py
frontend/: package-lock.json  package.json
inspo/: janan_ganesh_essay.md  janan_ganesh_essay_pol.md  learning_flywheel1.md  learning_flywheel2.md  learning_flywheel3.md
todos/: 001-complete-p1-jwt-secret-validation-bypass.md  002-complete-p1-db-session-held-across-await.md  003-complete-p1-async-def-with-sync-db.md  004-complete-p2-unsafe-non-null-assertion-layout.md  005-complete-p2-unsafe-jwt-payload-casts.md  007-complete-p2-duplicate-internal-api-url.md  (+23 more)
(+61 files in other folders)
