[project]
name = "proof-editor"
version = "0.1.0"
description = "AI writing partner — interview, draft, refine"
readme = { text = "", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.55.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.28.0",
    "python-frontmatter>=1.1.0",
    "websockets>=14.0",
    "exa-py>=2.4.0",
    "python-dotenv>=1.2.1",
    "ddgs>=9.10.0",
    "python-multipart>=0.0.22",
    "pymupdf>=1.27.1",
    "google-cloud-storage>=3.9.0",
]

[project.scripts]
proof-editor = "proof_editor.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proof_editor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
